# freeglut-sandbox

./: .gitignore  CMakeLists.txt  Makefile  camera.c  camera.h  drawable.c  drawable.h  gl-test  global_defines.h  lambert.frag.glsl  lambert.vert.glsl  linear_alg.c  linear_alg.h  main.c  ray.c  ray.h  shaderprogram.c  shaderprogram.h
